changing class to animated

--- a/sass/style.sass
+++ b/sass/style.sass
@@ -25,6 +25,6 @@ figure
   position: absolute
   +box-shadow(inset 1px 1px 1px -1px rgba(0,0,0,0.5), inset -1px -1px 1px -1px rgba(0,0,0,0.5))
   +transform-style(preserve-3d)
-  &.animating
+  &.animated
     +transition(all 0.5s ease)
 
