--- a/sass/style.sass
+++ b/sass/style.sass
@@ -1,13 +1,15 @@
 @import compass/reset
 @import compass/css3
 
-$figure-size: 320px/2
+$figure-size: 320px
+
 
 body
   +box-sizing(border-box)
+  +background(linear-gradient(#DAEDE2, #F6F792))
   -webkit-user-select: none
 
-figure
+.box
   width: $figure-size
   height: $figure-size
   position: absolute
@@ -15,15 +17,19 @@ figure
   left: 50%
   margin-top: -$figure-size/2
   margin-left: -$figure-size/2
-  +perspective(800)
+  +perspective(600)
 
 
-.box
+.side
   width: 100%
   height: 100%
-  background: red
   position: absolute
   +transform-style(preserve-3d)
-  &.animated
+  +backface-visibility(hidden)
+  &.front
+    background: #EA2E49
+  &.back
+    background: #333745
+    +transform(rotateY(-180deg))
+  &.animating
     +transition(all 0.5s ease)
-
