--- a/sass/style.sass
+++ b/sass/style.sass
@@ -2,6 +2,8 @@
 @import compass/css3
 
 $figure-size: 320px
+$front-color: #EA2E49
+$back-color: #333745
 
 
 body
@@ -27,9 +29,9 @@ body
   +transform-style(preserve-3d)
   +backface-visibility(hidden)
   &.front
-    background: #EA2E49
+    background: $front-color
   &.back
-    background: #333745
+    background: $back-color
     +transform(rotateY(-180deg))
   &.animating
     +transition(all 0.5s ease)
