--- a/sass/style.sass
+++ b/sass/style.sass
@@ -5,33 +5,38 @@ $figure-size: 320px
 $front-color: #EA2E49
 $back-color: #333745
 
+*
+  +box-sizing(border-box)
 
 body
   +box-sizing(border-box)
   +background(linear-gradient(#DAEDE2, #F6F792))
+  background-attachment: fixed
   -webkit-user-select: none
 
-.box
+.box-context
   width: $figure-size
   height: $figure-size
-  position: absolute
-  top: 50%
-  left: 50%
-  margin-top: -$figure-size/2
-  margin-left: -$figure-size/2
+  position: relative
+  margin: 20px auto
   +perspective(600)
 
+.box
+  display: block
+  width: 100%
+  height: 100%
+  position: absolute
+  +transform-style(preserve-3d)
+  &.animating
+    +transition(all 0.5s ease)
 
 .side
   width: 100%
   height: 100%
   position: absolute
-  +transform-style(preserve-3d)
   +backface-visibility(hidden)
   &.front
     background: $front-color
   &.back
     background: $back-color
-    +transform(rotateY(-180deg))
-  &.animating
-    +transition(all 0.5s ease)
+    +transform(rotateX(180deg))
